# pinba_engine

./: .clang-format  .clang-tidy  .cppcheck-suppressions  .dockerignore  .gitignore  .gitignore.cmake  .pre-commit-config.yaml  .release-please-manifest.json  AGENTS.md  AUTHORS  BUILD.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  DOCKER.md  Dockerfile  Dockerfile.mariadb1011  Dockerfile.mariadb118  Dockerfile.mysql80  Dockerfile.mysql84  Doxyfile  Makefile.am  QUICK_START.md  README  README.md  README_CMAKE.md  SECURITY.md  TODO  UBUNTU_24.04.md  codecov.yml  default_tables.sql  pinba.proto  release-please-config.json  upgrade_hostname_64.sql
.github/: dependabot.yml  mysql-versions.json  rpm-matrix.json
.github/codeql/: codeql-config.yml
.github/scripts/: check-mysql-versions.sh
.github/workflows/: ci.yml  codeql.yml  docker.yml  docs.yml  mysql-version-monitor.yml  ppa-build.yml  pr-title-conventional.yml  release-please.yml  rpm.yml
benchmarks/: CMakeLists.txt  benchmark_error_system.cc  benchmark_logging_system.cc  benchmark_monitoring_system.cc  benchmark_pool_operations.cc
cmake/: GetGitRevisionDescription.cmake  PinbaEngineConfig.cmake.in
debian/: changelog  clean  control  copyright  pinba-engine-common.install  pinba-engine-mariadb-10.11.install  pinba-engine-mariadb-10.11.metainfo.xml  pinba-engine-mariadb-10.11.postinst  pinba-engine-mariadb-10.11.prerm  pinba-engine-mariadb-11.8.metainfo.xml  pinba-engine-mariadb-11.8.postinst  pinba-engine-mysql-8.0.metainfo.xml  pinba-engine-mysql-8.0.postinst  pinba-engine-mysql-8.0.prerm  pinba-engine-mysql-8.4.metainfo.xml  pinba-engine-mysql-8.4.postinst  pinba-engine-mysql-8.4.prerm  pinba-engine.metainfo.xml  rules
debian/source/: options
docker-entrypoint-initdb.d/: 01-init-pinba.sh
docker/mariadb/conf.d/: zz-pinba.cnf
docker/mariadb/initdb.d/: 01-init-pinba.sh
docker/mysql/conf.d/: zz-pinba.cnf
docs/: build.md  docker.md  legacy-news.md  releasing.md  roadmap.md  tables.md
knowledge/: .gitignore  README.md  SCHEMA.md
knowledge/wiki/: index.md  log.md  overview.md
knowledge/wiki/concepts/: appstream-metainfo-packaging.md  cmake-build-system.md  copr-rpm-packaging.md  debian-ppa-packaging.md  docker-build-strategy.md  docker-tag-strategy.md  engine-rpm-packaging.md  github-actions-docker.md  github-actions-mysql-version-monitor.md  github-actions-ppa.md  launchpad-ppa-workflow.md  mysql-plugin-abi.md  mysql-plugin-install.md  mysql-plugin-migration-80-to-84.md  mysql-postinst-patterns.md  mysql-vendor-headers-minimal.md  php-extension-api.md  php-extension-build.md  php-extension-packaging.md  php-extension-test-infrastructure.md  php-pinba-configuration.md  php-version-monitoring.md  pinba-data-flow.md  pinba-pool-model.md  pinba-udp-protocol.md  pinboard-architecture.md  protobuf-runtime-strategy.md  report-percentile-field-mapping.md
knowledge/wiki/sources/: engine-rpm-session-2026-07-02.md  fork-build-docker.md  mysql-plugin-api.md  php-pinba-extension.md  pinba-engine-sysvars-and-tables.md  pinba-extension-fork.md  pinba-udp-protocol.md  ppa-packaging-session-2026-06-04.md  ppa-upload-session-2026-06-06.md  protobuf-modernization-session-2026-06-09.md  rpm-copr-session-2026-06-14.md  test-infra-appstream-session-2026-06-10.md  tony2001-readme.md
rpm/: build-srpm.sh  pinba-engine.metainfo.xml  pinba-engine.spec
scripts/: changelog-release-notes.py  extract-mariadb-headers.sh  percentile_mapping_test.sh  prepare-mariadb-headers.sh  require_compile_commands.sh  run_clang_tidy.sh  send_pinba_packet.py  smoke_test.sh
scripts/templates/: report3.tpl  report5.tpl  report6.tpl  report7.tpl  tag2_report2.tpl  tagN_report2.tpl  tag_report2.tpl
src/: .gitignore  binlog_config.h  config.h.in  data.cc  ha_pinba.cc  ha_pinba.h  hash.cpp  main.cc  my_config.h  mysql8_plugin_c.h  pinba.h  pinba.pb-c.cc  pinba.pb-c.h  pinba_config.h  pinba_error_modern.h  pinba_limits.h  pinba_lmap.cc  pinba_lmap.h  pinba_logging_modern.h  pinba_map.cc  pinba_map.h  pinba_maria_compat.h  pinba_monitoring_modern.h  pinba_plugin.lds  pinba_regenerate_report.h  pinba_regenerate_report_tpl.h  pinba_simple_test.cc  pinba_types.h  pinba_update_report.h  pinba_update_report_proto.h  pinba_update_report_proto_tpl.h  pinba_update_report_tpl.h  pool.cc  tags.cc  threadpool.cc  threadpool.h
tests/: CMakeLists.txt  test_error_system.cc  test_integration.cc  test_logging_system.cc  test_monitoring_system.cc  test_pinba_engine.cc  test_pinba_map.cc  test_pinba_protobuf.cc  test_simple.cc  test_threadpool.cc
tools/: extract-mysql-headers.sh
